# tinyshim

./: .bazelrc  BUILD.bazel  README.md  WORKSPACE  allocator.zig  elf_util.zig  hello.zig  mkshim.zig  payload.c  shim.ld  shim.zig  shim_generated_output_test.zig  shim_layout_test.zig  shim_templates.zig.tpl  shim_unstripped_output_test.zig  shrink.zig
.github/workflows/: ci.yaml
mkshim/: BUILD.bazel  mkshim.zig
patches/zig-clap/: multiple-positional-parameters.patch
shim/common/: BUILD.bazel  allocator.zig  spec.zig
shim/linux/: BUILD.bazel  encode_payload.zig  generate_shim.zig  payload.zig  shim.ld  shim.zig  shim_layout_test.zig
shim/windows/: BUILD.bazel  shim.zig  shim_unstripped_output_test.zig
shrink/elf/: BUILD.bazel  defs.bzl  shrink.zig
