load("@rules_zig//zig:defs.bzl", "zig_binary", "zig_configure_binary", "zig_package", "zig_test")
load(":defs.bzl", "configure_shrink_shims")

zig_test(
    name = "allocator_test",
    main = "allocator.zig",
)

zig_binary(
    name = "_shim_unconfigured",
    srcs = [
        "allocator.zig",
        "payload.zig",
    ],
    csrcs = ["payload.c"],
    linker_script = "shim.ld",
    main = "shim.zig",
    tags = ["manual"],
)

zig_configure_binary(
    name = "shim_unstripped",
    actual = ":_shim_unconfigured",
    mode = "release_small",
    threaded = "single",
)

zig_test(
    name = "shim_unstripped_output_test",
    main = "shim_unstripped_output_test.zig",
    tags = ["manual"],
)

# TODO[AH] Remove this once `zig_test` supports the `data` attribute.
sh_test(
    name = "shim_unstripped_output_test_run",
    srcs = [":shim_unstripped_output_test"],
    args = ["$(rootpath :shim_unstripped)"],
    data = [":shim_unstripped"],
)

zig_test(
    name = "elf_util_test",
    main = "elf_util.zig",
)

zig_test(
    name = "shim_layout_test",
    srcs = ["elf_util.zig"],
    main = "shim_layout_test.zig",
    tags = ["manual"],
)

# TODO[AH] Remove this once `zig_test` supports the `data` attribute.
sh_test(
    name = "shim_layout_test_run",
    srcs = [":shim_layout_test"],
    args = ["$(rootpath :shim_unstripped)"],
    data = [":shim_unstripped"],
)

zig_binary(
    name = "shrink",
    srcs = ["elf_util.zig"],
    main = "shrink.zig",
    tags = ["manual"],  # prevent build in target configuration.
    deps = ["@clap"],
)

platform(
    name = "x86_64-linux",
    constraint_values = [
        "@platforms//os:linux",
        "@platforms//cpu:x86_64",
    ],
)

configure_shrink_shims(
    name = "shim_template_files",
    section_name = ".payload",
    shim = ":shim_unstripped",
    shim_prefix = "shim-",
    shrink = ":shrink",
    targets = [
        ":x86_64-linux",
    ],
    zig_out = "shim_templates.zig",
)

zig_package(
    name = "shim_templates",
    extra_srcs = [":shim_template_files"],
    main = ":shim_templates.zig",
)

zig_test(
    name = "mkshim_test",
    srcs = [
        "allocator.zig",
        "payload.zig",
    ],
    main = "mkshim.zig",
    deps = [
        ":shim_templates",
        "@clap",
    ],
)

zig_binary(
    name = "mkshim",
    srcs = [
        "allocator.zig",
        "payload.zig",
    ],
    main = "mkshim.zig",
    deps = [
        ":shim_templates",
        "@clap",
    ],
)

zig_test(
    name = "shim_generated_output_test",
    main = "shim_generated_output_test.zig",
    tags = ["manual"],
)

# TODO[AH] Remove this once `zig_test` supports the `data` attribute.
sh_test(
    name = "shim_generated_output_test_run",
    srcs = [":shim_generated_output_test"],
    args = ["$(rootpath :mkshim)"],
    data = [":mkshim"],
)
